# hypermodern-python-4458652314

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release-drafter.yml
docs/: conf.py  index.rst  reference.rst
src/hypermodern_python/: console.py
src/hypermodern_python_lucasmbastos/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
