[tool.poetry]
name = "hypermodern-pythoni4458652314"
version = "0.1.0"
description = "The Hypermodern Python Project"
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/lucasmbastos/hypermodern-python-4458652314"
repository = "https://github.com/lucasmbastos/hypermodern-python-4458652314"
keywords = ["hypermodern"]
authors = ["Lucas de Miranda <lucasmbastos94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
