[tool.poetry]
name = "hypermodern-python-lucasmbastos"
version = "0.1.0"
description = "The Hypermodern Python Project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lucasmbastos/hypermodern-python-lucasmbastos"
repository = "https://github.com/lucasmbastos/hypermodern-python-lucasmbastos.git"
keywords = ["hypermodern"]
authors = ["Lucas de Miranda <lucasmbastos94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pylint = "^2.4.4"

[tool.poetry.scripts]
hypermodern-python-lucasmbastos = "hypermodern_python_lucasmbastos.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

